<resources>
    <string name="app_name">checkdemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="check">check</string>
    <string name="checkView">checkView</string>
    <string name="turnOn">turnOn</string>
    <string name="turnOff">turnOff</string>
    <string name="radio1">Man</string>
    <string name="radio2">Woman</string>
</resources>
