<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/layout">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:id="@+id/checkBox"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <CheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkView"
        android:id="@+id/checkView"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:checked="false" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/switch1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="108dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1"
            android:id="@+id/radioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2"
            android:id="@+id/radioButton2"
            android:checked="false" />

    </RadioGroup>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/turnOn"
        android:textOff="@string/turnOff"
        android:id="@+id/switch1"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/checkView"
        android:layout_alignParentStart="true"
        android:checked="false" />

</RelativeLayout>
